# Disco-Agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  config.toml.example  pyproject.toml
.claude/commands/: rebuild.md  setup-ue.md  setup.md  ue-research.md
docs/plans/: 2026-03-07-plugin-system-design.md  2026-03-07-plugin-system-plan.md  2026-03-08-multi-instance-manager-design.md  2026-03-08-multi-instance-manager-plan.md
plugins/ue/: config.py  workflows.py
plugins/ue/commands/: ue-research.md
service-templates/: com.disco-agent.manager.plist
specs/: voice-chat-research.md
src/disco_agent/: config.py  daemon.py  discord_bot.py  manager.py  plugins.py  service.py  session_history.py  streaming.py
src/disco_agent/workflows/: analyze.py  base.py  compile.py  custom.py  package.py  session.py  submit.py
src/ue_agent/: config.py  cost_tracker.py  daemon.py  discord_bot.py  queue.py  session_history.py  utils.py
src/ue_agent/workflows/: __init__.py  analyze.py  base.py  compile.py  custom.py  package.py  submit.py
tests/: conftest.py  test_compile.py  test_config.py  test_cost_tracker.py  test_discord_bot.py  test_manager.py  test_plugins.py  test_queue.py  test_service.py  test_session_history.py  test_session_workflow.py  test_streaming.py  test_thread_replies.py  test_ue_plugin.py  test_workflows.py
