[project]
name = "ue-agent"
version = "0.1.0"
description = "UE build automation agent daemon with Discord integration"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "discord.py>=2.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.19",
]

[project.scripts]
ue-agent = "ue_agent.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ue_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
