[project]
name = "disco-agent"
version = "0.1.0"
description = "Discord-to-Claude automation daemon with plugin system"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "discord.py>=2.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.19",
]

[project.scripts]
disco-agent = "disco_agent.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/disco_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
